添加运行一次任务
1、添加运行一次任务用于在调试时查看是否运行正确
