# app/router/job_router.go
@@ -15,6 +15,7 @@ func (job *JobRouter) Register(group *gin.RouterGroup) {
 		g.DELETE("/:id", r.Del)
 		g.PUT("", r.Modify)
 		g.GET("", r.List)
+		g.GET("atOnceRun/:id", r.AtOnceRun)
 		g.PUT("/status/:id", r.ModifyStatus)
 	}
 }
