# docs/swagger.yaml
@@ -816,6 +816,31 @@ paths:
       summary: 删除定时任务
       tags:
       - 定时任务管理
+  /api/job/atOnceRun/{id}:
+    get:
+      description: 马上运行一次任务
+      parameters:
+      - description: 任务ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'code: 200 成功'
+          schema:
+            $ref: '#/definitions/res.Base'
+        "500":
+          description: 错误返回内容
+          schema:
+            $ref: '#/definitions/res.Base'
+      security:
+      - ApiKeyAuth: []
+      summary: 马上运行一次任务
+      tags:
+      - 定时任务管理
   /api/job/status/{id}:
     put:
       description: 修改定时任务数据
